# back-vits

./: .gitatributes  .gitignore  cert.crt  cert.key  docker-compose.yml  manage.py  pyproject.toml  readme.md  requirements.txt  udo ss -tlnp | grep nginx  update.sh
.github/workflows/: deploy.yml
config/: gunicorn.service  nginx.conf
deploy/: gunicorn.service  nginx.conf  setup_deploy.sh
mystepik/: asgi.py  settings.py  urls.py  wsgi.py
server/: asgi.py  db.sqlite3  routing.py  urls.py  wsgi.py
server/apps/Application/: admin.py  apps.py  consumers.py  filters.py  models.py  serializers.py  views.py
server/apps/Application/migrations/: 0001_initial.py  0002_initial.py  0002_remove_application_title.py  (+3 more)
server/apps/Content/: admin.py  apps.py  models.py  permissions.py  serializers.py  views.py
server/apps/directions/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  views.py
server/apps/news/: admin.py  consumers.py  exceptions.py  models.py  routing.py  serializers.py  views.py
server/apps/perscalendar/: apps.py  models.py  serializers.py  views.py
server/apps/proftesting/: admin.py  apps.py  models.py  serializers.py  views.py
server/apps/regapp/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
server/apps/users/: admin.py  apps.py  backends.py  models.py  serializers.py  throttles.py  views.py
server/apps/virtmuseum/: admin.py  apps.py  mixins.py  models.py  serializers.py  views.py
server/settings/: db.sqlite3
server/settings/environments/: base.py  storage_backends.py
(+50 files in other folders)
