[project]
name = "vits"
version = "0.1.0"
description = ""
authors = [
    {name = "Tamerlan319", email = "tamerlan.soslambekov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django>=3.2,<4.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
